# ml-policy-projector

./: .gitignore  CITATION.cff  README.md  main.py  package.json  pyproject.toml
map-visualization-app/: README.md
map-visualization-app/backend/: server.py  utils.py
map-visualization-app/frontend/: package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
map-visualization-app/frontend/src/: app.css  app.d.ts  app.html
map-visualization-app/frontend/src/lib/: api.ts  constants.ts  store.ts  types.ts
map-visualization-app/frontend/src/lib/components/: BottomArea.svelte  BottomTray.svelte  Dropdown.svelte  Header.svelte  LeftSidebar.svelte  MainArea.svelte  RightSidebar.svelte
map-visualization-app/frontend/src/lib/embeddingMap/: EmbeddingMap.svelte  MapSettings.svelte  Tooltip.svelte  theme.ts
map-visualization-app/frontend/src/lib/mosaic/: appClient.ts  appQueries.ts  caseTableClient.ts  helperQueries.ts  loader.ts  mosaic.d.ts  tableViews.ts
map-visualization-app/frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts
notebooks/: PolicyProjector_CPU+OpenAI.ipynb  preprocess_data.ipynb
policy-projector/: README.md  package.json  postcss.config.js  tailwind.config.js  vite.config.js
policy-projector/policy_projector/src/: __init__.py  case.py  concept.py  dataset.py  llm.py  policy.py  policy_projector.py  prompts.py  steering.py  util.py
policy-projector/policy_projector/src/cached/: concept_classify.py  suggest_concepts.py
policy-projector/widget/: app.css  index.js
policy-projector/widget/components/: TableView.svelte
(+21 files in other folders)
